--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: "3"
 services:
-  n8n-joplin:
-    build:
-      context: .
-      args:
-        N8N_VERSION: "0.107.0"
-        JOPLIN_VERSION: "1.6.4"
-    image: jspiers/n8n-joplin:0.107.0-1.6.4
+  n8n:
+    image: n8nio/n8n:0.107.0
+    ports:
+      - "5678:5678"
+    volumes:
+      - type: volume
+        source: n8n-data
+        target: /home/node/.n8n
+  joplin:
+    image: jspiers/headless-joplin:1.6.4-node-14.15.5
     volumes:
       - ./joplin-config.json:/secrets/joplin-config.json
       - type: volume
         source: joplin-data
         target: /home/node/.config/joplin
-      - type: volume
-        source: n8n-data
-        target: /home/node/.n8n
-    ports:
-      - "5678:5678"
+    expose:
+      - 80
 volumes:
   joplin-data:
   n8n-data:
